# mavix-lang

./: .gitignore  CMakeLists.txt  Readme.md
include/: chunk.h  common.h  compiler.h  debug.h  memory.h  scanner.h  value.h  vm.h
src/: chunk.c  compiler.c  debug.c  main.c  memory.c  scanner.c  value.c  vm.c
tests/func_ptrs/: main.c
